<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sabber</string>
    <string name="history">History</string>
    <string name="downloading">Downloading</string>
    <string name="search">Search</string>
    <string name="search_hint">Search nzbindex.nl</string>
    <string name="menu_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_play">Resume</string>

    <string name="title_select_category">Pick a category</string>
    <string name="title_loading">Loading. Please wait…</string>
    <string name="question_delete_nzb">Delete the selected nzb?</string>
    <string name="question_send_nzb">Send this nzb to downloadserver?</string>

    <string name="option_delete_nzb">Delete item</string>
    <string name="option_change_category">Change category</string>
    <string name="option_positive">Yes</string>
    <string name="option_negative">No</string>
    <string name="text_time_finished">Estimated time finished:</string>
    <string name="text_total_size">Total download size:</string>
    <string name="text_itemname">name</string>
    <string name="text_time_left">Time left:</string>
    <string name="text_speed">Current speed:</string>

    <string name="notification_title_completed">Nzb download completed</string>
    <string name="notification_title_failed">Nzb download failed</string>
    <string name="notification_content_completed">%1$s download completed.</string>
    <string name="notification_content_failed">%1$s download failed.</string>

    <string name="advanced_pref">Advanced preferences</string>
    <string name="port">Port</string>
    <string name="apikey">Apikey</string>
    <string name="hostname">Hostname</string>
    <string name="pref_min_size_title">Minimal nzb size</string>
    <string name="pref_min_size_summary">Minimal nzb size in MB</string>
    <string name="pref_refresh_rate_title">Screen refresh rate</string>
    <string name="pref_refresh_rate_summary">Screen Refresh rate in seconds</string>
    <string name="pref_notifications_title">Enable notifications</string>
    <string name="pref_notifications_summary">Enable background notifications</string>
    <string name="pref_notifications_refresh_rate_title">Notificationservice Refresh rate</string>
    <string name="pref_notifications_refresh_rate_summary">Notificationservice Refresh rate in seconds</string>
    <string name="unavailable">unavailable</string>
    <string name="no_results">No results</string>

</resources>