<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:name="Hostname Preference"
        android:defaultValue=""
        android:inputType="textUri"
        android:key="hostnamePref"
        android:title="@string/hostname" />
    <EditTextPreference
        android:name="Port Preference"
        android:defaultValue="8080"
        android:inputType="number"
        android:key="portPref"
        android:title="@string/port" />
    <EditTextPreference
        android:name="Apikey Preference"
        android:defaultValue=""
        android:inputType="text"
        android:key="apikeyPref"
        android:title="@string/apikey" />

    <CheckBoxPreference
        android:name="Notifications Preference"
        android:key="notificationsPref"
        android:title="@string/pref_notifications_title" />

        <PreferenceCategory android:title="@string/advanced_pref" >
            <EditTextPreference
                android:name="Minimal size Preference"
                android:inputType="number"
                android:key="minsizePref"
                android:title="@string/pref_min_size_title" />
            <EditTextPreference
                android:name="Screen refresh rate Preference"
                android:inputType="number"
                android:key="screenRefreshratePref"
                android:defaultValue="10"
                android:title="@string/pref_refresh_rate_title" />
            <EditTextPreference
                android:name="Notifications refresh rate Preference"
                android:inputType="number"
                android:key="notificationsRefreshratePref"
                android:defaultValue="60"
                android:title="@string/pref_notifications_refresh_rate_title" />
        </PreferenceCategory>

</PreferenceScreen>
